--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "fzaninotto/faker": "^1.9",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
