--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
-        "orchestra/parser": "^5.0"
+        "orchestra/parser": "^5.0",
+        "socialiteproviders/vkontakte": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
