added response fb

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
         "orchestra/parser": "^5.0",
+        "socialiteproviders/facebook": "^1.0",
         "socialiteproviders/vkontakte": "^4.1"
     },
     "require-dev": {
