--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/ui": "^2.1",
         "orchestra/parser": "^5.0",
         "socialiteproviders/facebook": "^1.0",
+        "socialiteproviders/github": "^1.0",
         "socialiteproviders/vkontakte": "^4.1"
     },
     "require-dev": {
