--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/helpers": "^1.3",
+        "laravel/horizon": "4.3.5",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
         "orchestra/parser": "^5.0",
